# Florence2-http

./: README.md  setup.cfg
florence2_http/: shared.py
florence2_http/client/: __init__.py  client.py
florence2_http/server/: main.py  models.py  schemas.py
