[metadata]
name = florence2_http
version = 0.1.0
author = Antonin Couturier
description = Web service that exposes Microsoft’s Florence-2 model behind an HTTP server

[options]
packages = find:
install_requires =
    fastapi
    pydantic
    transformers
    uvicorn
    timm
    einops
    torch
    pillow
    requests
python_requires = >=3.7

[options.extras_require]
dev =
    pytest

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    florence2_server = florence2_http.server.main:app

